Add subpage for list of sources (resolves #22).

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -163,4 +163,9 @@
   <msg key="pageNotFound">Seite nicht gefunden...</msg>
   <msg key="bugMessage">Falls Sie einen Fehler auf unserer Webseite gefunden haben, informieren Sie uns bitte unter</msg>
   
+  <!-- worksList.html -->
+  <msg key="worksListOverview">Liste der Quellen in der Digitalen Quellensammlung</msg>
+  <msg key="furtherInformationTitle">Weitere Informationen</msg>
+  <msg key="listOfSources">Liste aller Quellen</msg>
+  
 </catalogue>
