Refine HTML delivery depending on requested resource type.

--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -297,8 +297,6 @@
   <msg key="constituted">Constituted</msg>
   <msg key="diplomaticLower">diplomatic</msg>
   <msg key="constitutedLower">constituted</msg>
-  
-  <msg key="workNotAvailable">This work is not yet available.</msg>
    
   <!--news-->
   <msg key="more">more</msg>
@@ -335,10 +333,15 @@
   <msg key="pageNotFound">This is not the page you were looking for...</msg>
   <msg key="bugMessage">In case you found a bug on our webpages, please let us know at</msg>
   
+  <msg key="authorNotYetAvailable">This article is not yet available.</msg>
+  <msg key="lemmaNotYetAvailable">This dictionary article is not yet available.</msg>
+  <msg key="workNotYetAvailable">This work is not yet available.</msg>
+  
   <!-- worksList.html -->
   <msg key="worksListOverview">List of Sources in the Digital Collection</msg>
   <msg key="furtherInformationTitle">Further Information</msg>
   <msg key="listOfSources">List of all sources</msg>
+  
   
   
 </catalogue>
