--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -61,7 +61,10 @@
   <msg key="txtFiles">Plain Text (TXT)</msg>
   <msg key="teiFiles">TEI-XML</msg>
   
-  <msg key="workNotAvailable">Dieses Werk ist noch nicht verfügbar.</msg>
+  <!-- errors -->
+  <msg key="authorNotYetAvailable">Dieser Artikel ist noch nicht verfügbar.</msg>
+  <msg key="lemmaNotYetAvailable">Dieser Wörterbucheintrag ist noch nicht verfügbar.</msg>
+  <msg key="workNotYetAvailable">Dieses Werk ist noch nicht verfügbar.</msg>
   
   <!-- works/details -->
   <msg key="worksNotice">Die digitale Quellensammlung des Projekts "Die Schule von Salamanca" besteht 
