--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -61,7 +61,8 @@
   <msg key="txtFiles">Plain Text (TXT)</msg>
   <msg key="teiFiles">TEI-XML</msg>
   <msg key="citeUp">Zitieren</msg>
-  <msg key="citeThisText">Diesen Text zitieren</msg>
+  <msg key="citeThisWork">Dieses Werk zitieren</msg>
+  <msg key="accessedDate">Aufgerufen am</msg>
   
   <!-- errors -->
   <msg key="authorNotYetAvailable">Dieser Artikel ist noch nicht verfügbar.</msg>
