--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -59,7 +59,7 @@
   
   <!-- project.html -->
   
-  <msg key="projectDesc">Project description</msg>
+  <msg key="projectDesc">Project Description</msg>
   <msg key="pojectDesc1">The (re-)discovery of the fundamental importance of the School of Salamanca for the early modern discourse about law, politics, religion and ethics 
     is widespread among of philosophers and legal historians. During the 16th and 17th centuries, the intellectual sparks emitted by this academic force field reached not 
     only the most far-flung cities of the Spanish monarchy, be it Mexico, Madrid or Manila: they also spread to universities in the protestant territories of the Ancien Régime. 
