--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -355,47 +355,47 @@
   
   
   <!-- div, milestone, element types for node index derivatives -->
-  <msg key="div-administrative">Administrative</msg>
-  <msg key="div-article">Article</msg>
-  <msg key="div-book">Book</msg>
-  <msg key="div-chapter">Chapter</msg>
-  <msg key="div-colophon">Colophon</msg>
-  <msg key="div-source">Source</msg>
-  <msg key="div-commentary">Commentary</msg>
-  <msg key="div-contents">Contents</msg>
-  <msg key="div-corrigenda">Corrigenda</msg>
-  <msg key="div-dedication">Dedication</msg>
-  <msg key="div-disputation">Disputatio</msg>
-  <msg key="div-doubt">Dubium</msg>
-  <msg key="div-entry">Lemma</msg>
-  <msg key="div-foreword">Foreword</msg>
-  <msg key="div-gloss">Gloss</msg>
-  <msg key="div-index">Index</msg>
-  <msg key="div-lecture">Relectio</msg>
-  <msg key="div-part">Pars</msg>
-  <msg key="div-preface">Preface</msg>
-  <msg key="div-privileges">Privileges</msg>
-  <msg key="div-question">Quaestio</msg>
-  <msg key="div-section">Section</msg>
-  <msg key="div-segment">Sectio</msg>
-  <msg key="div-title">Titulus</msg>
-  <msg key="div-law">Lex</msg>
-  <msg key="div-partida">Partida</msg>
-  <msg key="ms-article">Art.</msg>
-  <msg key="ms-number">Num.</msg>
-  <msg key="ms-section">Section</msg>
-  <msg key="elem-front">Front Matter</msg>
-  <msg key="elem-back">Back Matter</msg>
-  <msg key="elem-p">Paragraph</msg>
-  <msg key="elem-signed">Signature</msg>
-  <msg key="elem-head">Heading</msg>
-  <msg key="elem-label">Titel</msg>
-  <msg key="elem-titlePage">Title Page</msg>
-  <msg key="elem-note">Marginal Note</msg>
-  <msg key="elem-list">List</msg>
-  <msg key="elem-item">Item</msg>
-  <msg key="elem-lg">Poem</msg>
-  <msg key="elem-text-volume">Volume</msg>
+  <msg key="tei-div-administrative">Administrative</msg>
+  <msg key="tei-div-article">Article</msg>
+  <msg key="tei-div-book">Book</msg>
+  <msg key="tei-div-chapter">Chapter</msg>
+  <msg key="tei-div-colophon">Colophon</msg>
+  <msg key="tei-div-source">Source</msg>
+  <msg key="tei-div-commentary">Commentary</msg>
+  <msg key="tei-div-contents">Contents</msg>
+  <msg key="tei-div-corrigenda">Corrigenda</msg>
+  <msg key="tei-div-dedication">Dedication</msg>
+  <msg key="tei-div-disputation">Disputatio</msg>
+  <msg key="tei-div-doubt">Dubium</msg>
+  <msg key="tei-div-entry">Lemma</msg>
+  <msg key="tei-div-foreword">Foreword</msg>
+  <msg key="tei-div-gloss">Gloss</msg>
+  <msg key="tei-div-index">Index</msg>
+  <msg key="tei-div-lecture">Relectio</msg>
+  <msg key="tei-div-part">Pars</msg>
+  <msg key="tei-div-preface">Preface</msg>
+  <msg key="tei-div-privileges">Privileges</msg>
+  <msg key="tei-div-question">Quaestio</msg>
+  <msg key="tei-div-section">Section</msg>
+  <msg key="tei-div-segment">Sectio</msg>
+  <msg key="tei-div-title">Titulus</msg>
+  <msg key="tei-div-law">Lex</msg>
+  <msg key="tei-div-partida">Partida</msg>
+  <msg key="tei-ms-article">Art.</msg>
+  <msg key="tei-ms-number">Num.</msg>
+  <msg key="tei-ms-section">Section</msg>
+  <msg key="tei-front">Front Matter</msg>
+  <msg key="tei-back">Back Matter</msg>
+  <msg key="tei-p">Paragraph</msg>
+  <msg key="tei-signed">Signature</msg>
+  <msg key="tei-head">Heading</msg>
+  <msg key="tei-label">Titel</msg>
+  <msg key="tei-titlePage">Title Page</msg>
+  <msg key="tei-note">Marginal Note</msg>
+  <msg key="tei-list">List</msg>
+  <msg key="tei-item">Item</msg>
+  <msg key="tei-lg">Poem</msg>
+  <msg key="tei-text-volume">Volume</msg>
   <msg key="crumb-generic">Passage</msg>
   
   
