--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -361,47 +361,47 @@
     <msg key="editedByAbbrLow">ed. por</msg>  
     
     <!-- div, milestone, element types for node index derivatives -->
-    <msg key="div-administrative">Administrativo</msg>
-    <msg key="div-article">Artículo</msg>
-    <msg key="div-book">Libro</msg>
-    <msg key="div-chapter">Capítulo</msg>
-    <msg key="div-colophon">Colofón</msg>
-    <msg key="div-source">Referencia</msg>
-    <msg key="div-commentary">Comentario</msg>
-    <msg key="div-contents">Contenido</msg>
-    <msg key="div-corrigenda">Errata</msg>
-    <msg key="div-dedication">Dedicación</msg>
-    <msg key="div-disputation">Disputatio</msg>
-    <msg key="div-doubt">Dubium</msg>
-    <msg key="div-entry">Lema</msg>
-    <msg key="div-foreword">Prólogo</msg>
-    <msg key="div-gloss">Glosa</msg>
-    <msg key="div-index">Índice</msg>
-    <msg key="div-lecture">Relectio</msg>
-    <msg key="div-part">Pars</msg>
-    <msg key="div-preface">Introducción</msg>
-    <msg key="div-privileges">Privilegio</msg>
-    <msg key="div-question">Quaestio</msg>
-    <msg key="div-section">Sección</msg>
-    <msg key="div-segment">Sectio</msg>
-    <msg key="div-title">Titulus</msg>
-    <msg key="div-law">Lex</msg>
-    <msg key="div-partida">Partida</msg>
-    <msg key="ms-article">Art.</msg>
-    <msg key="ms-number">Num.</msg>
-    <msg key="ms-section">Section</msg>
-    <msg key="elem-front">Parte preliminar</msg>
-    <msg key="elem-back">Apéndice</msg>
-    <msg key="elem-p">Párrafo</msg>
-    <msg key="elem-signed">Firma</msg>
-    <msg key="elem-head">Título</msg>
-    <msg key="elem-label">Etiqueta</msg>
-    <msg key="elem-titlePage">Portada</msg>
-    <msg key="elem-note">Nota marginal</msg>
-    <msg key="elem-list">Lista</msg>
-    <msg key="elem-item">Elemento listado</msg>
-    <msg key="elem-lg">Poema</msg>
-    <msg key="elem-text-volume">Volumen</msg>
+    <msg key="tei-div-administrative">Administrativo</msg>
+    <msg key="tei-div-article">Artículo</msg>
+    <msg key="tei-div-book">Libro</msg>
+    <msg key="tei-div-chapter">Capítulo</msg>
+    <msg key="tei-div-colophon">Colofón</msg>
+    <msg key="tei-div-source">Referencia</msg>
+    <msg key="tei-div-commentary">Comentario</msg>
+    <msg key="tei-div-contents">Contenido</msg>
+    <msg key="tei-div-corrigenda">Errata</msg>
+    <msg key="tei-div-dedication">Dedicación</msg>
+    <msg key="tei-div-disputation">Disputatio</msg>
+    <msg key="tei-div-doubt">Dubium</msg>
+    <msg key="tei-div-entry">Lema</msg>
+    <msg key="tei-div-foreword">Prólogo</msg>
+    <msg key="tei-div-gloss">Glosa</msg>
+    <msg key="tei-div-index">Índice</msg>
+    <msg key="tei-div-lecture">Relectio</msg>
+    <msg key="tei-div-part">Pars</msg>
+    <msg key="tei-div-preface">Introducción</msg>
+    <msg key="tei-div-privileges">Privilegio</msg>
+    <msg key="tei-div-question">Quaestio</msg>
+    <msg key="tei-div-section">Sección</msg>
+    <msg key="tei-div-segment">Sectio</msg>
+    <msg key="tei-div-title">Titulus</msg>
+    <msg key="tei-div-law">Lex</msg>
+    <msg key="tei-div-partida">Partida</msg>
+    <msg key="tei-ms-article">Art.</msg>
+    <msg key="tei-ms-number">Num.</msg>
+    <msg key="tei-ms-section">Section</msg>
+    <msg key="tei-front">Parte preliminar</msg>
+    <msg key="tei-back">Apéndice</msg>
+    <msg key="tei-p">Párrafo</msg>
+    <msg key="tei-signed">Firma</msg>
+    <msg key="tei-head">Título</msg>
+    <msg key="tei-label">Etiqueta</msg>
+    <msg key="tei-titlePage">Portada</msg>
+    <msg key="tei-note">Nota marginal</msg>
+    <msg key="tei-list">Lista</msg>
+    <msg key="tei-item">Elemento listado</msg>
+    <msg key="tei-lg">Poema</msg>
+    <msg key="tei-text-volume">Volumen</msg>
     <msg key="crumb-generic">Pasaje</msg>
     
 </catalogue>
