--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -401,7 +401,7 @@
     <msg key="tei-list">Lista</msg>
     <msg key="tei-item">Elemento listado</msg>
     <msg key="tei-lg">Poema</msg>
-    <msg key="tei-text-volume">Volumen</msg>
+    <msg key="tei-text-work_volume">Volumen</msg>
     <msg key="crumb-generic">Pasaje</msg>
     
 </catalogue>
