Display search help more prominently

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -167,6 +167,7 @@
   <!-- Search -->
   <msg key="searchFor">Suche nach</msg>
   <msg key="allResults">Alle</msg>
+  <msg key="sphinxHelp">Hilfe</msg>
   
   <!-- general language -->
   <msg key="of">von</msg>
