--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -397,7 +397,7 @@
   <msg key="tei-item">Item</msg>
   <msg key="tei-lg">Poem</msg>
   <msg key="tei-text-work_volume">Volume</msg>
-  <msg key="crumb-generic">Passage</msg>
+  <msg key="tei-generic">Passage</msg>
   
   
   
