--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -304,6 +304,7 @@
   <msg key="citeUp">Cite</msg>
   <msg key="citeThisWork">Cite this work</msg>
   <msg key="accessedDate">Accessed</msg>
+  <msg key="ebook">E-book</msg>
    
   <!--news-->
   <msg key="more">more</msg>
