--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -321,6 +321,10 @@
     <msg key="accessedDate">Consultado por última vez el</msg>
     <msg key="ebook">Libro electrónico</msg>
     <msg key="openToolbox">Abrir caja de herramientas para este pasaje</msg>
+    <msg key="citePass">Citar este pasaje</msg>
+    <msg key="linkPass">Ir a / enlazar este pasaje</msg>
+    <msg key="teiExpPass">Descargar TEI para este pasaje</msg>
+    <msg key="txtExpPass">Descargar texto puro para este pasaje</msg>
     
     <!--news-->
     <msg key="more">más</msg>
