Add basic txt export button for passages

--- a/data/i18n/collection_de.xml
+++ b/data/i18n/collection_de.xml
@@ -195,6 +195,7 @@
   <!-- general language abbreviations, conjunctions, phrases, etc. -->
   <msg key="inLow">in</msg>
   <msg key="editedByAbbrLow">hg. von</msg>
+  <msg key="copy">Kopieren</msg>
   
   <!-- div, milestone, element types for node index derivatives -->
   <msg key="tei-div-administrative">Administrativ</msg>
