--- a/data/i18n/collection_en.xml
+++ b/data/i18n/collection_en.xml
@@ -359,6 +359,7 @@
   <!-- general language abbreviations, conjunctions, phrases, etc. -->
   <msg key="inLow">in</msg>
   <msg key="editedByAbbrLow">ed. by</msg>
+  <msg key="copy">Copy</msg>
   
   
   <!-- div, milestone, element types for node index derivatives -->
