--- a/data/i18n/collection_es.xml
+++ b/data/i18n/collection_es.xml
@@ -367,6 +367,7 @@
     <!-- general language abbreviations, conjunctions, phrases, etc. -->
     <msg key="inLow">en</msg>
     <msg key="editedByAbbrLow">ed. por</msg>  
+    <msg key="copy">Copiar</msg>
     
     <!-- div, milestone, element types for node index derivatives -->
     <msg key="tei-div-administrative">Administrativo</msg>
